@@ -59,6 +59,7 @@ Change: Streamline the proof of Theorem NPNF
 Change: Expand Example CAEHW
 Change: Re-title Example CAEHW to Example CASE
 Change: Theorem EMRCP, shorter proof with new Theorem ESM
+Change: Locate Theorem MNEM earlier, with new proof
 Typo: Exercise SSLE.C53, add second condition to quoted problem (Jaime Ruiz)
 Typo: Theorem PSPHS, stray addition sign in the proof (Rachel Chaiser)
 Typo: Exercise MM.T12, correct reference, reword slightly (Matt Fergoda)
